Fix z-index of highlighted item

--- a/public/style.less
+++ b/public/style.less
@@ -25,6 +25,7 @@
     background: linear-gradient(lighten(@bg-color, 10%), @bg-color);
     border-color: darken(@bg-color, 10%);
     text-shadow: none;
+    z-index: auto;
 
     .list-group-item-text {
       color: lighten(@bg-color, 50%);
